--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,14 +262,49 @@
     "    data = np.load(\"data\\mnist-data.npz\")\n",
     "\n",
     "    best_C = train_with_different_C()\n",
-    "    clf = LinearSVC(max_iter=100000, loss='hinge', C=best_C)\n",
-    "    clf.fit(data[\"training_data\"], data[\"training_labels\"])\n",
+    "    clf = LinearSVC(max_iter=1000000, loss='hinge', C=best_C)\n",
+    "    clf.fit(np.reshape(np.squeeze(data[\"training_data\"]), (60000, 28*28)), data[\"training_labels\"])\n",
     "\n",
     "    X_test = np.reshape(np.squeeze(data[\"test_data\"]), (10000, 28*28))\n",
     "    Y_test = clf.predict(X_test)\n",
     "\n",
-    "    save_csv.results_to_csv(Y_test)\n",
+    "    with open('Problem4.txt', 'w') as f:\n",
+    "        for Y in Y_test:\n",
+    "            f.write(str(Y) + '\\n')\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 88%|████████▊ | 7/8 [03:06<00:46, 46.93s/it]f:\\python app\\lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "100%|██████████| 8/8 [05:36<00:00, 42.01s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:0.01, validation:0.9092\n",
+      "C:0.02, validation:0.9109\n",
+      "C:0.04, validation:0.9134\n",
+      "C:0.08, validation:0.9149\n",
+      "C:0.16, validation:0.9143\n",
+      "C:0.32, validation:0.9146\n",
+      "C:0.64, validation:0.9144\n",
+      "C:1.28, validation:0.9145\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_with_best_C()"
    ]
   },
   {
