--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -220,7 +220,7 @@
    "metadata": {},
    "source": [
     "# Problem4:Hyperparameter Tuning\n",
-    "## the result is saved under scripts/\\_\\_pycache\\_\\_"
+    "## the result is saved in Problem4.txt"
    ]
   },
   {
