--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
     "        validation_accuracy.append(accuracy_score(validation_labels, clf.predict(validation_data)))\n",
     "    \n",
     "    for i in range(8):\n",
-    "        print('C:{}, validation:{}'.format(C_list[i], validation_accuracy[i]))\n",
+    "        print('C:{}, validation_accuracy:{}'.format(C_list[i], validation_accuracy[i]))\n",
     "\n",
     "    best_C = C_list[validation_accuracy.index(max(validation_accuracy))]\n",
     "\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,42 +268,17 @@
     "    X_test = np.reshape(np.squeeze(data[\"test_data\"]), (10000, 28*28))\n",
     "    Y_test = clf.predict(X_test)\n",
     "\n",
-    "    with open('Problem4.txt', 'w') as f:\n",
-    "        for Y in Y_test:\n",
-    "            f.write(str(Y) + '\\n')\n",
+    "    save_csv.results_to_csv(Y_test)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 88%|████████▊ | 7/8 [03:06<00:46, 46.93s/it]f:\\python app\\lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\n",
-      "100%|██████████| 8/8 [05:36<00:00, 42.01s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:0.01, validation:0.9092\n",
-      "C:0.02, validation:0.9109\n",
-      "C:0.04, validation:0.9134\n",
-      "C:0.08, validation:0.9149\n",
-      "C:0.16, validation:0.9143\n",
-      "C:0.32, validation:0.9146\n",
-      "C:0.64, validation:0.9144\n",
-      "C:1.28, validation:0.9145\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Problem4\n",
     "test_with_best_C()"
    ]
   },
@@ -312,6 +287,120 @@
    "metadata": {},
    "source": [
     "# Problem5:K-Fold Cross-Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def spam_K_FOLD_partitioning(K):\n",
+    "    \"\"\"partition spam dataset to K parts\"\"\"\n",
+    "\n",
+    "    data = np.load(\"data\\spam-data.npz\")\n",
+    "    rng = np.random.default_rng()\n",
+    "    index = rng.permutation(4172)\n",
+    "    data_shuffled, labels_shuffled = data[\"training_data\"][index], data[\"training_labels\"][index]\n",
+    "    data_list, labels_list = [], []\n",
+    "\n",
+    "    num = 4172 // K\n",
+    "    for i in range(K-1):\n",
+    "        dataset, labelsset = data_shuffled[i*num:(i+1)*num], labels_shuffled[i*num:(i+1)*num]\n",
+    "        data_list.append(dataset)\n",
+    "        labels_list.append(labelsset)\n",
+    "    data_list.append(data_shuffled[(K-1)*num:])\n",
+    "    labels_list.append(labels_shuffled[(K-1)*num:])\n",
+    "    return data_list, labels_list\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def K_fold_cross_validation(K, C):\n",
+    "    \"\"\"do K_fold_cross_validation with hyperparameter C\"\"\"\n",
+    "\n",
+    "    data_list, labels_list = spam_K_FOLD_partitioning(K)\n",
+    "    score = []\n",
+    "\n",
+    "    for i in tqdm(range(K)):\n",
+    "        clf = LinearSVC(loss='hinge', C=C, max_iter=1000000)\n",
+    "        training_data, training_labels = [], []\n",
+    "        validation_data, validation_labels = [], []\n",
+    "        for index in range(K):\n",
+    "            if index == i:\n",
+    "                validation_data.extend(data_list[index])\n",
+    "                validation_labels.extend(labels_list[index])\n",
+    "            else:\n",
+    "                training_data.extend(data_list[index])\n",
+    "                training_labels.extend(labels_list[index])\n",
+    "        clf.fit(training_data, training_labels)\n",
+    "        score.append(accuracy_score(validation_labels, clf.predict(validation_data)))\n",
+    "    return sum(score) / len(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def best_C(K):\n",
+    "    \"\"\"K fold cross validation for different C, and choose the best C\"\"\"\n",
+    "    validation_accuracy = []\n",
+    "    C_list = [0.01 * pow(2,i) for i in range(8)]\n",
+    "\n",
+    "    for C in tqdm(C_list):\n",
+    "        validation_accuracy.append(K_fold_cross_validation(K, C))\n",
+    "    \n",
+    "    for i in range(8):\n",
+    "        print('C:{}, validation_accuracy:{}'.format(C_list[i], validation_accuracy[i]))\n",
+    "\n",
+    "    best_C = C_list[validation_accuracy.index(max(validation_accuracy))]\n",
+    "    \n",
+    "    return best_C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_C = best_C(5)\n",
+    "print('best_C:{}'.format(best_C))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problem6: Kaggle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "略"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problem7: Theory of Hard-Margin Support Vector Machines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO"
    ]
   }
  ],
