--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -400,7 +400,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "test"
+    "## (a) \n",
+    "原问题为：\n",
+    "$$\n",
+    "\\min _{w, \\alpha} \\|w\\|^2 \\text { subject to } y_i\\left(X_i \\cdot w+\\alpha\\right) \\geq 1, \\forall i \\in\\{1, \\ldots, n\\}.\n",
+    "$$\n",
+    "其拉格朗日函数为：\n",
+    "$$\n",
+    "L(w,\\lambda,\\alpha) = \\|w\\|^2 - \\sum _{i=1}^{n}\\lambda_i(y_i(X_i \\cdot w +\\alpha) - 1)，\\lambda _i \\geq 0.\n",
+    "$$\n",
+    "那么原问题的拉格朗日对偶函数为：\n",
+    "$$\n",
+    "\\inf _{w, \\alpha}L(w,\\lambda,\\alpha)，\\lambda _i \\geq 0.\n",
+    "$$\n",
+    "那么原问题的拉格朗日对偶问题为：\n",
+    "$$\n",
+    "\\max _{\\lambda _i \\geq 0} \\min _{w, \\alpha} \\|w\\|^2 - \\sum _{i=1}^{n}\\lambda_i(y_i(X_i \\cdot w +\\alpha) - 1)\n",
+    "$$\n",
+    "由$\\|w\\|^2 - \\sum _{i=1}^{n}\\lambda_i(y_i(X_i \\cdot w +\\alpha) - 1)=0$，对 $w$ 和 $\\alpha$求导得：\n",
+    "$$\n",
+    "2w - \\sum _{i=1}^{n}\\lambda_i y_i \\cdot X_i = 0, \\\\\n",
+    "\\sum _{i=1}^{n}\\lambda_i y_i = 0\n",
+    "$$\n",
+    "将等式代入拉格朗日对偶问题，得到：\n",
+    "$$\n",
+    "\\max _{\\lambda \\geq 0}\\sum_{i=1}^{n}\\lambda_{i}-\\dfrac{1}{4}\\lambda_i\\lambda_j y_i y_j X_i \\cdot X_j, \\sum_{i=1}^{n}\\lambda_i y_i = 0\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(b)"
    ]
   }
  ],
